# aws-cost-guard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aws_cost_guard/: cli.py
src/aws_cost_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_help.py
